cluster-talos/kubernetes/apps/radarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    k10.kasten.io/backup: "true"
    storage-class: vsphere
