cluster-talos/kubernetes/apps/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  hostnames:
    - radarr.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
